--- a/build-apple/PanicPainter.xcodeproj/xcshareddata/xcschemes/PanicPainter (iOS).xcscheme
+++ b/build-apple/PanicPainter.xcodeproj/xcshareddata/xcschemes/PanicPainter (iOS).xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
-               BuildableName = "PanicPainter (iOS).app"
+               BuildableName = "panic-painter-ios.app"
                BlueprintName = "PanicPainter (iOS)"
                ReferencedContainer = "container:PanicPainter.xcodeproj">
             </BuildableReference>
@@ -31,7 +31,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
-            BuildableName = "PanicPainter (iOS).app"
+            BuildableName = "panic-painter-ios.app"
             BlueprintName = "PanicPainter (iOS)"
             ReferencedContainer = "container:PanicPainter.xcodeproj">
          </BuildableReference>
@@ -54,7 +54,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
-            BuildableName = "PanicPainter (iOS).app"
+            BuildableName = "panic-painter-ios.app"
             BlueprintName = "PanicPainter (iOS)"
             ReferencedContainer = "container:PanicPainter.xcodeproj">
          </BuildableReference>
@@ -71,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EB74548B1D74D75C002FBAE6"
-            BuildableName = "PanicPainter (iOS).app"
+            BuildableName = "panic-painter-ios.app"
             BlueprintName = "PanicPainter (iOS)"
             ReferencedContainer = "container:PanicPainter.xcodeproj">
          </BuildableReference>
