--- a/build-win10/CMakeLists.txt
+++ b/build-win10/CMakeLists.txt
@@ -48,7 +48,9 @@ set(PP_FILES
         ../source/scenes/level/PPLevelSelectScene.h
         ../source/scenes/level/PPLevelSelectScene.cpp
         ../source/utils/PPRandom.h
-        ../source/utils/PPRandom.cpp)
+        ../source/utils/PPRandom.cpp
+        ../source/scenes/gameplay/PPFeedback.h
+        ../source/scenes/gameplay/PPFeedback.cpp)
 
 set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)
 
