--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="..\..\source\scenes\level\PPLevelSelectScene.cpp">
       <Filter>Scenes\Level</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPFeedback.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PanicPainter.rc">
@@ -192,6 +195,9 @@
     </ClInclude>
     <ClInclude Include="..\..\source\scenes\level\PPLevelSelectScene.h">
       <Filter>Scenes\Level</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPFeedback.h">
+      <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
