Closed beta to master (#39)
* textures integrated

* button positioning

* level select working buttons

* widgets working

* city v1

* screen sizing

* fix android issue

* temp test screen size set

* city, space, museum

* file cleanup

* update levels

* Feedback and vanishing point (#35)

* Fix JSON error

* Fix safe area issue in world select

* Scoring (#34)

* Basic scoring system done

* remove unused code

* Add label

* Fix font issue

* le bug fix

* lowered timer

Co-authored-by: Laura Sizemore <ls797@cornell.edu>

* Fix back button for level select

Co-authored-by: Bryan Graeser <bsg68@cornell.edu>
Co-authored-by: lsizemore8 <32024811+lsizemore8@users.noreply.github.com>
Co-authored-by: Ansh Godha <anshgodha714@gmail.com>
Co-authored-by: Laura Sizemore <ls797@cornell.edu>

--- a/build-win10/CMakeLists.txt
+++ b/build-win10/CMakeLists.txt
@@ -47,8 +47,12 @@ set(PP_FILES
         ../source/scenes/menu/PPMenuScene.cpp
         ../source/scenes/level/PPLevelSelectScene.h
         ../source/scenes/level/PPLevelSelectScene.cpp
+        ../source/scenes/level/PPWorldSelectScene.h
+        ../source/scenes/level/PPWorldSelectScene.cpp
         ../source/utils/PPRandom.h
-        ../source/utils/PPRandom.cpp)
+        ../source/utils/PPRandom.cpp
+        ../source/scenes/gameplay/PPFeedback.h
+        ../source/scenes/gameplay/PPFeedback.cpp)
 
 set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)
 
