--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -100,8 +100,14 @@
     <ClCompile Include="..\..\source\scenes\menu\PPMenuScene.cpp">
       <Filter>Scenes\Menu</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\scenes\level\PPWorldSelectScene.cpp">
+      <Filter>Scenes\Level</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\source\scenes\level\PPLevelSelectScene.cpp">
       <Filter>Scenes\Level</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPFeedback.cpp">
+      <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -184,8 +190,14 @@
     <ClInclude Include="..\..\source\scenes\menu\PPMenuScene.h">
       <Filter>Scenes\Menu</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\scenes\level\PPWorldSelectScene.h">
+      <Filter>Scenes\Level</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\source\scenes\level\PPLevelSelectScene.h">
       <Filter>Scenes\Level</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPFeedback.h">
+      <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
