--- a/assets/scenes/settings.json
+++ b/assets/scenes/settings.json
@@ -14,8 +14,7 @@
                 "visible"  : true,
                 "pushsize" : true,
                 "anchor" : [0, 0],
-                "scale"    : 0.215,
-                "toggle"   : true
+                "scale"    : 0.215
               },
               "children": {
                 "up": {
@@ -30,7 +29,7 @@
                 "y_offset": -0.5
               }
             },
-            "eiffel": {
+            "leftPalette": {
               "type": "Button",
               "data": {
                 "upnode": "up",
@@ -52,7 +51,7 @@
                 "y_offset": -0.47
               }
             },
-            "house": {
+            "reset": {
                 "type": "Button",
                 "data": {
                   "upnode": "up",
@@ -73,72 +72,6 @@
                   "x_offset": -0.5,
                   "y_offset": -0.48
                 }
-            },
-            "museum": {
-                "type": "Button",
-                "data": {
-                  "upnode": "up",
-                  "visible"  : true,
-                  "pushsize" : true,
-                  "anchor" : [0,0],
-                  "scale"    : 0.2
-                },
-                "children": {
-                  "up": {
-                    "type": "Image",
-                    "data": {
-                      "texture": "worldselect-museum"
-                    }
-                  }
-                },
-                "layout": {
-                  "x_offset": -0.5,
-                  "y_offset": 0.02
-                }
-            },
-            "island": {
-              "type": "Button",
-              "data": {
-                "upnode": "up",
-                "visible"  : true,
-                "pushsize" : true,
-                "anchor" : [0,0],
-                "scale"    : 0.2
-              },
-              "children": {
-                "up": {
-                  "type": "Image",
-                  "data": {
-                    "texture": "worldselect-island"
-                  }
-                }
-              },
-              "layout": {
-                "x_offset": -0.22,
-                "y_offset": 0.07
-              }
-            },
-            "space": {
-              "type": "Button",
-              "data": {
-                "upnode": "up",
-                "visible"  : true,
-                "pushsize" : true,
-                "anchor" : [0,0],
-                "scale"    : 0.2
-              },
-              "children": {
-                "up": {
-                  "type": "Image",
-                  "data": {
-                    "texture": "worldselect-space"
-                  }
-                }
-              },
-              "layout": {
-                "x_offset": 0.17,
-                "y_offset": -0.02
-              }
             },
             "menubutton": {
                 "type": "Button",
