--- a/build-win10/PanicPainter/PanicPainter.vcxproj.filters
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj.filters
@@ -61,9 +61,6 @@
     <ClCompile Include="..\..\source\scenes\gameplay\PPCanvas.cpp">
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\source\scenes\gameplay\PPGlobalTimer.cpp">
-      <Filter>Scenes\Gameplay</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\source\scenes\gameplay\PPColorPalette.cpp">
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
@@ -110,6 +107,9 @@
       <Filter>Scenes\Level</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\scenes\gameplay\PPFeedback.cpp">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\scenes\gameplay\PPDangerBar.cpp">
       <Filter>Scenes\Gameplay</Filter>
     </ClCompile>
     <ClCompile Include="..\..\source\scenes\settings\PPSettingsScene.cpp">
@@ -178,9 +178,6 @@
     <ClInclude Include="..\..\source\scenes\gameplay\PPCanvasBlock.h">
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\source\scenes\gameplay\PPGlobalTimer.h">
-      <Filter>Scenes\Gameplay</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\source\scenes\gameplay\PPColorStrip.h">
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
@@ -203,6 +200,9 @@
       <Filter>Scenes\Level</Filter>
     </ClInclude>
     <ClInclude Include="..\..\source\scenes\gameplay\PPFeedback.h">
+      <Filter>Scenes\Gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\scenes\gameplay\PPDangerBar.h">
       <Filter>Scenes\Gameplay</Filter>
     </ClInclude>
     <ClInclude Include="..\..\source\scenes\settings\PPSettingsScene.h">
