--- a/build-win10/PanicPainter/PanicPainter.vcxproj
+++ b/build-win10/PanicPainter/PanicPainter.vcxproj
@@ -218,6 +218,7 @@
     <ClCompile Include="..\..\source\scenes\pause\PPPauseScene.cpp" />
     <ClCompile Include="..\..\source\scenes\settings\PPSettingsScene.cpp" />
     <ClCompile Include="..\..\source\utils\PPAnimation.cpp" />
+    <ClCompile Include="..\..\source\utils\PPPaintBatch.cpp" />
     <ClCompile Include="..\..\source\utils\PPTimer.cpp" />
     <ClCompile Include="..\..\source\utils\PPRandom.cpp" />
   </ItemGroup>
@@ -257,9 +258,14 @@
     <ClInclude Include="..\..\source\scenes\settings\PPSettingsScene.h" />
     <ClInclude Include="..\..\source\utils\PPAnimation.h" />
     <ClInclude Include="..\..\source\utils\PPHeader.h" />
+    <ClInclude Include="..\..\source\utils\PPPaintBatch.h" />
     <ClInclude Include="..\..\source\utils\PPTimer.h" />
     <ClInclude Include="..\..\source\utils\PPTypeDefs.h" />
     <ClInclude Include="..\..\source\utils\PPRandom.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\source\utils\SplatShader.frag" />
+    <None Include="..\..\source\utils\SplatShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
